<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrickBreaker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_newGame">New Game</string>
    <string name="button_resumeGame">Resume Game</string>
    <string name="button_about">About</string>
    <string name="checkbox_neverLoseBall">Never lose ball</string>
    <string name="checkbox_soundEffectsEnabled">Sound effects</string>
    <string name="text_highScoreLabel">High Score:</string>
    <string name="about_text">\nA simple \'breakout\' app, inspired by Little Brick Out.\n\nhttp://www.android.com/\n</string>
    <string name="msg_ready">Touch to Start</string>
    <string name="msg_game_over">Game Over</string>
    <string name="msg_winner">Winner!</string>
    <string name="difficulty">Difficulty: </string>

    <string-array name="difficulty_level_names">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Absurd</item>
    </string-array>

    
    <string name="title_activity_breakout">BreakoutActivity</string>
    
    <string name="button_play">Start</string>
    <string name="button_levels">Levels</string>
    <string name="button_option">Option</string>
    <string name="button_ranking">Ranking</string>
    <string name="button_exit">Exit</string>
    
    <string name="button_reset_score">Reset Scores</string>
    <string name="button_change_user">User: Master</string>
    <string name="check_sound">Sound Effects</string>
    <string name="check_vibration">Vibration</string>
    <string name="button_back">Back</string>
    
    <string name="title_option">Options</string>
    
    <string name="title_ranking">Rankings</string>
    <string name="title_no_ranking">No Rankings Found!</string>
    <string name="msg_no_scores">There are no recorded scores!</string>
    
    <string name="msg_reset_scores">Are you sure you want to reset all scores?</string>
    <string name="msg_exit">Are you sure you want to exit the game?</string>
	
    <string name="title_change_username">Enter User Name:</string>
    
    <string name="title_settings">Settings</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    
</resources>
