<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_option"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_option"
    tools:context="br.usp.ime.breakoutapp.MainActivity" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   		android:paddingTop="@dimen/icon_vertical_margin"
   		android:paddingLeft="@dimen/icon_horizontal_margin"
   		android:paddingRight="@dimen/icon_horizontal_margin"
    	android:layout_gravity="center"
    	android:gravity="center" >
        
		<TextView
			android:id="@+id/textViewTitleOption"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
    		android:paddingTop="@dimen/icon_vertical_margin"
			android:gravity="center"
			android:text="@string/title_option"
			android:textColor="@color/white"
			android:textSize="32sp"
			android:textStyle="bold" />
		
        <Button
            android:id="@+id/btBackOption"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
    		android:layout_alignParentRight="true"
	        android:background="@drawable/back"
            android:onClick="onClickBack" />
        
    </RelativeLayout>
    
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
   			android:paddingBottom="@dimen/activity_vertical_margin"
	        android:gravity="bottom"
	        android:orientation="vertical"
	        android:baselineAligned="false" >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
    		android:paddingBottom="@dimen/icon_vertical_margin"
	        android:gravity="bottom|center_horizontal"
	        android:orientation="vertical"
	        android:layout_weight="1" >
	        
	        <CheckBox
		        android:id="@+id/checkSound"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:paddingBottom="@dimen/activity_vertical_margin"
			    android:paddingTop="@dimen/activity_vertical_margin"
		        android:text="@string/check_sound"
				android:textColor="@color/green"
				android:textSize="16sp"
		        android:onClick="onClickSoundEffectsEnabled" />
			<!--
		    <CheckBox
		        android:id="@+id/checkVibration"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:paddingBottom="@dimen/activity_vertical_margin"
			    android:paddingTop="@dimen/activity_vertical_margin"
		        android:text="@string/check_vibration"
				android:textColor="@color/white"
		        android:onClick="onClickVibrationMode"/>
			-->
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
    		android:paddingTop="@dimen/icon_vertical_margin"
	        android:gravity="top|center_horizontal"
	        android:orientation="vertical"
	        android:layout_weight="1" >
	        
		    <TextView
		        android:id="@+id/btResetScore"
		        android:layout_width="150dp"
		        android:layout_height="60dp"
		        android:gravity="center"
		        android:text="@string/button_reset_score"
		     	android:textColor="@color/white"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:typeface="monospace"
		        android:textScaleX="1.2"
		        android:clickable="true"
	        	android:onClick="onClickResetScore" />
			
		    <Button
		        android:id="@+id/btChangeUsername"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	        	android:onClick="onClickChangeUsername" />
	        
	    </LinearLayout>
	</LinearLayout>
</RelativeLayout>